# sqlx-sqlite-basics-tutorial

./: .gitignore  Cargo.toml  README.md  sqlite.db-shm  sqlite.db-wal
migrations/: 20221115213844_users.sql  20221116224004_items.sql  20221116225021_users_lastname.sql
src/: main.rs
